<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="128dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginTop="32dp"
        android:text="0"
        android:textAlignment="textEnd"
        android:textSize="24dp"
        />

    <EditText
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:layout_marginTop="40dp"
        android:layout_margin="20dp"
        android:textSize="24dp"
        android:layout_below="@id/screen"
        android:inputType="numberDecimal"
        android:text="0" />

    <LinearLayout
        android:id="@+id/btn_layer0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:layout_below="@+id/display"
        >

        <Button
            android:id="@+id/btn_AC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="24dp"
            android:text="AC"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="24dp"
            android:layout_weight="2"/>


        <Button
            android:id="@+id/btn_backspace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="24dp"
            android:text="@string/backspace"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_layer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:layout_below="@+id/btn_layer0"
        >

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="24dp"
            android:text="@string/btn1"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="24dp"
            android:text="@string/btn2"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="24dp"
            android:text="@string/btn3"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="24dp"
            android:text="@string/btnplus"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_layer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:layout_below="@+id/btn_layer1">

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="24dp"
            android:text="@string/btn4"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="24dp"
            android:text="@string/btn5"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="24dp"
            android:text="@string/btn6"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="24dp"
            android:text="@string/btnminus"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_layer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:layout_below="@+id/btn_layer2">

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="24dp"
            android:text="@string/btn7"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="24dp"
            android:text="@string/btn8"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="24dp"
            android:text="@string/btn9"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_multi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="24dp"
            android:text="@string/btnmulti"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_layer4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:layout_below="@+id/btn_layer3">

        <Button
            android:id="@+id/btn_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="24dp"
            android:text="@string/btndot"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="24dp"
            android:text="@string/btn0"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_ans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="24dp"
            android:text="@string/btnans"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="24dp"
            android:text="@string/btndiv"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>